# nadi

./: Cargo.toml  PKGBUILD  README.md
example/: jpt.txt  ohio.txt
icons/: generate-ico.sh
qgis/nadi/: Makefile  README.html  README.txt  __init__.py  metadata.txt  nadi.py  nadi_algorithm.py  nadi_provider.py  pb_tool.cfg  resources.py  resources.qrc
qgis/nadi/help/source/: conf.py  index.rst
src/: cliargs.rs  connection.rs  list.rs  main.rs  network.rs  timeseries.rs  usgs.rs
src/timeseries/: discharges.rs  mod.rs
