[package]
name = "nadi"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
gdal = "0.15.0"
gdal-sys = "0.9.0"
ordered-float = "3.7.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
statrs = "0.16.0"
