[package]
name = "nadi"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
gdal = "0.16.0"
gdal-sys = { version = "0.9.1", features = ["bindgen"] }
ordered-float = "3.7.0"
polars = { version = "0.32.1", features = ["lazy", "dtype-date", "rolling_window"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
statrs = "0.16.0"
string-template-plus = "0.4.2"
